do not shade the first column

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -730,6 +730,7 @@
             Grid = False
             Header = GridView.Horizontal
             Border = False
+            Sorted = True
           }
         }
         { LibrarySelInfo Label
