--- a/.src/Form/zzzFake.form
+++ b/.src/Form/zzzFake.form
@@ -1,7 +1,7 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,19,14)
+  MoveScaled(0,0,53,47)
   Visible = False
   Icon = Picture["xt7-player.png"]
   Picture = Picture["FakeMask.png"]
@@ -11,12 +11,16 @@
   SkipTaskbar = True
   Opacity = 0
   { VSplit1 VSplit
-    MoveScaled(4,2,12,9)
-    Background = &H000000&
+    MoveScaled(3,2,12,9)
     Expand = True
   }
   { ScrollView1 ScrollView
-    MoveScaled(2,2,9,9)
+    MoveScaled(1,3,9,9)
     Border = False
+  }
+  { Expander1 SidePanel
+    MoveScaled(9,19,24,18)
+    Arrangement = Arrange.Fill
+    Hidden = True
   }
 }
