--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -800,15 +800,44 @@
           Tag = "playlist"
           Text = ("Label3")
         }
+        { HBox10 HBox
+          MoveScaled(2,4,33,4)
+          Spacing = True
+          Margin = True
+          Padding = 1
+          { ShoutSearchLabel1 Label
+            MoveScaled(0,0,9,3)
+            AutoResize = True
+            Text = ("Playlists")
+          }
+          { PlaylistsCombo ComboBox
+            MoveScaled(7,0,11,4)
+            ToolTip = ("Choose a Playlist")
+            Expand = True
+          }
+          { Separator3 Separator
+            MoveScaled(23,0,2,4)
+          }
+          { ButtonSavePls Button
+            MoveScaled(25,0,4,4)
+            ToolTip = ("Save the playlist")
+            Picture = Picture["icon:/16/save"]
+          }
+          { ButtonDeletePls Button
+            MoveScaled(29,0,4,4)
+            ToolTip = ("Delete the playlist")
+            Picture = Picture["icon:/16/delete"]
+          }
+        }
         { Panel1 Panel GridPanels
           Name = "Panel1"
-          MoveScaled(2,3,35,27)
+          MoveScaled(0,10,35,34)
           Background = Color.TextBackground
           Expand = True
           Arrangement = Arrange.Fill
           Border = Border.Plain
           { PlaylistGrid GridView
-            MoveScaled(2,2,29,18)
+            MoveScaled(1,3,29,18)
             Tracking = True
             ToolTip = ("Drag'n drop files or media links to add them,")
             Drop = True
@@ -820,7 +849,7 @@
           }
         }
         { WaitPanel2 TextLabel
-          MoveScaled(0,32,36,5)
+          MoveScaled(0,48,36,5)
           Visible = False
           Background = Color.TextBackground
           Expand = True
@@ -828,7 +857,7 @@
           Border = Border.Raised
         }
         { PlayListSelInfoBox HBox
-          MoveScaled(0,38,37,4)
+          MoveScaled(0,54,37,4)
           { MoveUpPlsBTN Button
             MoveScaled(0,0,4,4)
             ToolTip = ("Move selected items up in the list.\nYou can use the mouse wheel too.")
@@ -860,7 +889,7 @@
           Text = ("Label3")
         }
         { HBox14 HBox
-          MoveScaled(1,3,33,4)
+          MoveScaled(1,5,33,4)
           Spacing = True
           Margin = True
           Padding = 1
