--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1875,6 +1875,10 @@
       Port = 4856
     }
   }
+  { TimerNowNext #Timer
+    #MoveScaled(48,7)
+    Delay = 5000
+  }
 }
 
 # Gambas Action File 3.0
