--- a/.src/Form/EpgForm.form
+++ b/.src/Form/EpgForm.form
@@ -1,13 +1,13 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,142.8571,78.5714)
+  MoveScaled(0,0,129,79)
   Background = &H0B3A72&
   Foreground = &HFFFFFF&
   Persistent = True
   Arrangement = Arrange.Vertical
   { VBox1 VBox
-    MoveScaled(1,-11,142,88)
+    MoveScaled(1,-11,122,88)
     Expand = True
     Margin = True
     { Separator3 Separator
@@ -189,7 +189,7 @@
       MoveScaled(2,79,79,1)
     }
     { HBox3 HBox
-      MoveScaled(2,83,138,4)
+      MoveScaled(2,83,119,4)
       { TextBoxSearchEvent TextBox
         MoveScaled(0,0,25,4)
         Background = &HCDE9FF&
@@ -201,35 +201,36 @@
         Picture = Picture["icon:/medium/find"]
       }
       { VBox5 VBox
-        MoveScaled(57,0,3,4)
+        MoveScaled(32,0,3,4)
         Expand = True
       }
       { LedPic PictureBox
-        MoveScaled(61,1,3,2)
+        MoveScaled(37,1,3,2)
         Picture = Picture["LedOff.png"]
         Alignment = Align.Center
       }
       { LedText TextLabel
-        MoveScaled(67,1,10,2)
+        MoveScaled(42,1,13,2)
         Font = Font["Bold,Italic"]
         Foreground = &HFFFFFF&
         AutoResize = True
         Text = ("0 Events")
         Alignment = Align.Center
+        Wrap = False
       }
       { VBox3 VBox
-        MoveScaled(78,0,2,4)
+        MoveScaled(55,0,2,4)
       }
       { EpgScanProcess ProgressBar
-        MoveScaled(83,1,26,3)
+        MoveScaled(60,1,26,3)
         Visible = False
         Font = Font["Bold"]
       }
       { VBox4 VBox
-        MoveScaled(110,0,0.5714,4)
+        MoveScaled(89,0,0.5714,4)
       }
       { ButtonStop Button
-        MoveScaled(114,0,12,4)
+        MoveScaled(92,0,12,4)
         Visible = False
         Font = Font["Bold"]
         Background = &HCDE9FF&
@@ -238,7 +239,7 @@
         Text = ("Stop")
       }
       { ButtonRefreshAll Button
-        MoveScaled(126,0,12,4)
+        MoveScaled(105,0,12,4)
         Font = Font["Bold"]
         Background = &HCDE9FF&
         Foreground = &H0B3A72&
